--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Oqtaioq",
+  "name": "Read manga online",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "mini-logo.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
@@ -21,5 +21,9 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "background_color1": "#212325",
+  "background_color2": "#3D4244",
+  "accent_color1": "#F5BD61",
+  "accent_color2": "#2D72B7",
+  "text_color": "#FFFFFF"
 }
