--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,25 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+src/storage/Nän Hao men Şan Fen.rar
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b1.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b2.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b3.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b4.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b5.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b6.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b7.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b8.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b9.jpg
+src/storage/Nän Hao men Şan Fen/t1-t1/Nän Hao men Şan Fen t1-t1-b10.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b1.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b2.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b3.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b4.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b5.jpg
+src/storage/Nän Hao men Şan Fen/t1-t3/Nän_Hao_men_Şan_Fen_t1-t3-b6.jpg
+src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b1.jpg
+src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b2.jpg
+src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b3.jpg
+src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b4.jpg
+src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b5.jpg
