--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b2.jpg
 src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b3.jpg
 src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b4.jpg
 src/storage/Nän Hao men Şan Fen/t1-t4/Nän_Hao_men_Şan_Fen_t1-t4-b5.jpg
+
+package-lock.json
+package.json
